# brsr-v2

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  AI_AUDIT.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE_AUDIT.md  DEBUG.md  DEPLOYMENT.md  DEPLOY_VPS.md  ESG_AUDIT.md  LICENSE  MODULES.md  OBSERVABILITY_AUDIT.md  PRICING.md  README.md  ROADMAP.md  RUN_NATIVE.md  SECURITY-PROD.md  SECURITY.md  SECURITY_AUDIT.md  TECH_STACK.md  audit_status.md  bundle-debug.sh  docker-compose.deploy.yml  docker-compose.prod.yml  e2e_proof.py  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
services/ai-engine/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.uedi  README.md  pyproject.toml  requirements-uedi.txt  requirements.txt
services/ai-engine/app/: __init__.py  classifier.py  config.py  llm.py  main.py  main_uedi.py  registry.py  schemas.py  text.py  uedi_bridge.py
services/ai-engine/app/agents/: document_classifier.py  entity_extraction_agent.py  prompt_versions.py  validation_agent.py
services/ai-engine/app/confidence/: __init__.py  composite_scorer.py  scorer.py
services/ai-engine/app/extractors/: __init__.py  base.py  csv.py  electricity_discom.py  excel.py  hr_headcount.py  image.py  pdf_native.py  pdf_ocr.py  waste_manifest.py  water_bill.py
services/ai-engine/app/llm/: __init__.py  (+2 more)
services/ai-engine/services/: pipeline.py
services/ai-engine/tests/: conftest.py  test_classifier.py  test_confidence_scorer.py  test_excel_extractor.py  test_orchestrator_e2e.py  test_pdf_extractor.py  test_registry_and_units.py
(+550 files in other folders)
